# libcgl

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
Debug/: makefile  sources.mk
Debug/src/: subdir.mk
include/: Actor.h  Model.h  PrimitiveShape.h  Scen.h  Scene.h  ShaderProgram.h
include/cgl/: Actor.hpp  Camera.hpp  Model.hpp  ResourceManager.hpp  Scene.hpp
src/: Actor.cpp  Actor.h  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Mesh.hpp  Model.cpp  Model.h  Model.hpp  PrimitiveShape.cpp  PrimitiveShape.h  PrimitiveShape.hpp  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  Scen.cpp  Scen.h  Scene.cpp  Scene.h  Scene.hpp  ShaderProgram.cpp  ShaderProgram.h  ShaderProgram.hpp
